--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="background">#212121</color>
+    <color name="cardView">#323232</color>
+    <color name="input">#7E7C7C</color>
 </resources>
