--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -11,8 +11,8 @@
         android:label="fragment_list"
         tools:layout="@layout/fragment_list" >
         <argument
-            android:name="list"
-            app:argType="string" />
+            android:name="type"
+            app:argType="com.example.capstoneproject.model.Type" />
         <action
             android:id="@+id/action_listFragment_to_detailFragment"
             app:destination="@id/detailFragment" />
