--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -83,9 +83,9 @@
                 android:textColor="@color/white"
                 android:textSize="@dimen/text_size_medium"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@+id/genre"
-                app:layout_constraintEnd_toStartOf="@+id/favButton"
-                app:layout_constraintStart_toEndOf="@+id/image"
+                app:layout_constraintBottom_toTopOf="@id/genre"
+                app:layout_constraintEnd_toStartOf="@id/favButton"
+                app:layout_constraintStart_toEndOf="@id/image"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_chainStyle="packed" />
 
@@ -98,9 +98,9 @@
                 android:textColor="@color/white"
                 android:textSize="@dimen/text_size_small"
                 app:layout_constraintBottom_toTopOf="@+id/year"
-                app:layout_constraintEnd_toEndOf="@+id/title"
-                app:layout_constraintStart_toStartOf="@+id/title"
-                app:layout_constraintTop_toBottomOf="@+id/title" />
+                app:layout_constraintEnd_toEndOf="@id/title"
+                app:layout_constraintStart_toStartOf="@id/title"
+                app:layout_constraintTop_toBottomOf="@id/title" />
 
             <TextView
                 android:id="@+id/year"
@@ -110,9 +110,9 @@
                 android:text="@string/year"
                 android:textColor="@color/white"
                 android:textSize="@dimen/text_size_small"
-                app:layout_constraintBottom_toTopOf="@+id/ratingImageView"
-                app:layout_constraintStart_toStartOf="@+id/genre"
-                app:layout_constraintTop_toBottomOf="@+id/genre" />
+                app:layout_constraintBottom_toTopOf="@id/ratingImageView"
+                app:layout_constraintStart_toStartOf="@id/genre"
+                app:layout_constraintTop_toBottomOf="@id/genre" />
 
             <TextView
                 android:id="@+id/rating"
@@ -122,18 +122,18 @@
                 android:text="@string/rating"
                 android:textColor="@color/white"
                 android:textSize="@dimen/text_size_small"
-                app:layout_constraintBottom_toBottomOf="@+id/ratingImageView"
-                app:layout_constraintStart_toEndOf="@+id/ratingImageView"
-                app:layout_constraintTop_toTopOf="@+id/ratingImageView" />
+                app:layout_constraintBottom_toBottomOf="@id/ratingImageView"
+                app:layout_constraintStart_toEndOf="@id/ratingImageView"
+                app:layout_constraintTop_toTopOf="@id/ratingImageView" />
 
             <ImageView
                 android:id="@+id/ratingImageView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin_small"
-                app:layout_constraintBottom_toBottomOf="@+id/image"
-                app:layout_constraintStart_toStartOf="@+id/year"
-                app:layout_constraintTop_toBottomOf="@+id/year"
+                app:layout_constraintBottom_toBottomOf="@id/image"
+                app:layout_constraintStart_toStartOf="@id/year"
+                app:layout_constraintTop_toBottomOf="@id/year"
                 app:srcCompat="@drawable/rating_star" />
 
             <TextView
@@ -145,8 +145,8 @@
                 android:textColor="@color/white"
                 android:textSize="@dimen/text_size_medium"
                 android:textStyle="bold"
-                app:layout_constraintStart_toStartOf="@+id/image"
-                app:layout_constraintTop_toBottomOf="@+id/image" />
+                app:layout_constraintStart_toStartOf="@id/image"
+                app:layout_constraintTop_toBottomOf="@id/image" />
 
             <TextView
                 android:id="@+id/description"
@@ -157,8 +157,8 @@
                 android:text="@string/description"
                 android:textColor="@color/white"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="@+id/descriptionHeader"
-                app:layout_constraintTop_toBottomOf="@+id/descriptionHeader" />
+                app:layout_constraintStart_toStartOf="@id/descriptionHeader"
+                app:layout_constraintTop_toBottomOf="@id/descriptionHeader" />
 
             <TextView
                 android:id="@+id/imdbLink"
@@ -170,18 +170,18 @@
                 android:textColor="@color/white"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="@+id/description"
-                app:layout_constraintStart_toStartOf="@+id/description"
-                app:layout_constraintTop_toBottomOf="@+id/description" />
+                app:layout_constraintEnd_toEndOf="@id/description"
+                app:layout_constraintStart_toStartOf="@id/description"
+                app:layout_constraintTop_toBottomOf="@id/description" />
 
             <Button
                 android:id="@+id/favButton"
                 android:layout_width="@dimen/margin_xlarge"
                 android:layout_height="@dimen/margin_xlarge"
-                android:layout_marginEnd="8dp"
+                android:layout_marginEnd="@dimen/margin_small"
                 android:background="@drawable/popcorn_border"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/image" />
+                app:layout_constraintTop_toTopOf="@id/image" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
