--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -8,7 +8,7 @@
     android:background="@color/background">
 
     <TextView
-        android:id="@+id/SignInText"
+        android:id="@+id/signInText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/margin_xlarge"
@@ -16,7 +16,7 @@
         android:textColor="@color/white"
         android:textStyle="bold"
         android:textSize="@dimen/text_size_large"
-        app:layout_constraintBottom_toTopOf="@+id/SignInCardView"
+        app:layout_constraintBottom_toTopOf="@id/SignInCardView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -51,7 +51,7 @@
                 android:hint="@string/email"
                 android:inputType="textEmailAddress"
                 android:paddingStart="@dimen/padding_small"
-                app:layout_constraintBottom_toTopOf="@+id/signInPassword"
+                app:layout_constraintBottom_toTopOf="@id/signInPassword"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
@@ -70,25 +70,25 @@
                 android:hint="@string/password"
                 android:inputType="textPassword"
                 android:paddingStart="@dimen/padding_small"
-                app:layout_constraintBottom_toTopOf="@+id/SignInButton"
-                app:layout_constraintEnd_toEndOf="@+id/signInEmail"
+                app:layout_constraintBottom_toTopOf="@id/signInButton"
+                app:layout_constraintEnd_toEndOf="@id/signInEmail"
                 app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="@+id/signInEmail"
-                app:layout_constraintTop_toBottomOf="@+id/signInEmail" />
+                app:layout_constraintStart_toStartOf="@id/signInEmail"
+                app:layout_constraintTop_toBottomOf="@id/signInEmail" />
 
             <Button
-                android:id="@+id/SignInButton"
+                android:id="@+id/signInButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin_xlarge"
                 android:background="@drawable/custom_button"
                 android:text="@string/sign_in"
                 android:textColor="@color/white"
-                app:layout_constraintBottom_toTopOf="@+id/createAccount"
-                app:layout_constraintEnd_toEndOf="@+id/signInPassword"
+                app:layout_constraintBottom_toTopOf="@id/createAccount"
+                app:layout_constraintEnd_toEndOf="@id/signInPassword"
                 app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="@+id/signInPassword"
-                app:layout_constraintTop_toBottomOf="@+id/signInPassword" />
+                app:layout_constraintStart_toStartOf="@id/signInPassword"
+                app:layout_constraintTop_toBottomOf="@id/signInPassword" />
 
             <TextView
                 android:id="@+id/createAccount"
@@ -101,10 +101,10 @@
                 android:textSize="@dimen/text_size_small"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="@+id/SignInButton"
+                app:layout_constraintEnd_toEndOf="@id/signInButton"
                 app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="@+id/SignInButton"
-                app:layout_constraintTop_toBottomOf="@+id/SignInButton" />
+                app:layout_constraintStart_toStartOf="@id/signInButton"
+                app:layout_constraintTop_toBottomOf="@id/signInButton" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
