--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
-    tools:context=".view.SignUpFragment">
+    tools:context=".ui.signup.SignUpFragment">
 
     <TextView
         android:id="@+id/SignUpText"
