--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -10,33 +10,15 @@
         android:name="com.example.capstoneproject.ui.list.ListFragment"
         android:label="fragment_list"
         tools:layout="@layout/fragment_list" >
-        <argument
-            android:name="type"
-            app:argType="com.example.capstoneproject.model.Type" />
         <action
             android:id="@+id/action_listFragment_to_detailFragment"
             app:destination="@id/detailFragment" />
         <action
             android:id="@+id/action_listFragment_to_favoriteFragment2"
             app:destination="@id/favoriteFragment" />
-        <action
-            android:id="@+id/action_listFragment_to_homeFragment2"
-            app:destination="@id/homeFragment" />
-        <action
-            android:id="@+id/action_listFragment_to_homeFragment"
-            app:destination="@id/homeFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/homeFragment"
-        android:name="com.example.capstoneproject.ui.home.HomeFragment"
-        android:label="fragment_home"
-        tools:layout="@layout/fragment_home" >
-        <action
-            android:id="@+id/action_homeFragment_to_listFragment"
-            app:destination="@id/listFragment" />
-        <action
-            android:id="@+id/action_homeFragment_to_favoriteFragment2"
-            app:destination="@id/favoriteFragment" />
+        <argument
+            android:name="type"
+            app:argType="com.example.capstoneproject.model.Type" />
     </fragment>
     <fragment
         android:id="@+id/signUpFragment"
@@ -76,14 +58,20 @@
     </fragment>
     <fragment
         android:id="@+id/favoriteFragment"
-        android:name="com.example.capstoneproject.ui.favorite.FavoriteFragment"
+        android:name="com.example.capstoneproject.ui.favorite.FavoriteListFragment"
         android:label="fragment_favorite"
         tools:layout="@layout/fragment_favorite" >
         <action
-            android:id="@+id/action_favoriteFragment_to_homeFragment"
-            app:destination="@id/homeFragment" />
-        <action
             android:id="@+id/action_favoriteFragment_to_detailFragment"
             app:destination="@id/detailFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/homeFragment"
+        android:name="com.example.capstoneproject.ui.home.HomeFragment"
+        android:label="fragment_home"
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_homeFragment_to_listFragment"
+            app:destination="@id/listFragment" />
     </fragment>
 </navigation>
