--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -76,9 +76,9 @@
     </fragment>
     <fragment
         android:id="@+id/firstFragment"
-        android:name="com.example.capstoneproject.ui.first.FirstFragment"
+        android:name="com.example.capstoneproject.ui.info.InfoFragment"
         android:label="fragment_first"
-        tools:layout="@layout/fragment_first" >
+        tools:layout="@layout/fragment_info" >
         <action
             android:id="@+id/action_firstFragment_to_signInFragment"
             app:destination="@id/signInFragment" />
